--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,4 +1,4 @@
-
+/* Reset */
 *, *::before, *::after {
   box-sizing: border-box;
 }
@@ -23,3 +23,4 @@ input, button, textarea, select {
 p, h1, h2, h3, h4, h5, h6 {
   overflow-wrap: break-word;
 }
+/* Reset */
